# transfolk-core

./: .gitignore  LICENSE  README.md  pyproject.toml
src/transfolk_core/charts/: chart_features.py  densityHeatmap.py  experts.py  generatePieces.py  histograms.py  histogramsMultimetric.py  membership.py  pca.py  pianoRoll.py  training_curves.py
src/transfolk_core/config/: __init__.py  paths.py  resolver.py  settings.py
src/transfolk_core/db/: config_registry.py  db_connection.py  sql_createtable.txt  sql_inserts1.txt  sql_inserts2.txt  transfolk_config.db
src/transfolk_core/features/: extract_features.py
src/transfolk_core/generation/: generator.py
src/transfolk_core/metrics/: classifierBasedStyleProbability.py  conditionalEntropy.py  corpus_membership_classifier.py  modalStability.py  patternRetentionRate.py  patternRetentionRateMelodic.py  tokenLevelEntropy.py
src/transfolk_core/model/: architecture_test.py  base_music_model.py  dataset.py  model_factory.py  music_transformer.py  music_transformer_gpt.py  music_transformer_gpt_kv.py  music_transformer_relative.py  music_transformer_rope.py
src/transfolk_core/patterns/: distance.py  melodicPatternSearcher.py  (+1 more)
test/: run_transfolk_core_tests.py
test/tests_tfcore/: common.py  test_00_imports_and_layout.py  test_01_settings_paths_resolver.py  test_02_entities_serialization.py  test_03_config_registry_sqlite.py  test_04_tokenization_core.py  test_05_decoder_music21.py  test_06_model_factory_forward.py  test_07_training_factories.py  test_08_pipeline_smoke.py  test_09_static_quality_checks.py
(+32 files in other folders)
