[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transfolk-core"
version = "0.1.0"
description = "Core symbolic music processing, tokenization, modelling, training and evaluation tools for TransFolk-based projects."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }

authors = [
    { name = "Brian Martínez-Rodríguez" }
]

dependencies = [
    "torch==2.11.0",
    "numpy==1.26.4",
    "scipy==1.11.4",
    "music21==8.3.0",
    "matplotlib==3.8.3",
    "tqdm==4.66.2",
    "joblib==1.3.2",
    "pyyaml==6.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black"
]

features = [
    "pandas"
]

classification = [
    "pandas",
    "scikit-learn"
]

full = [
    "pandas",
    "scikit-learn"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true